@@ -58,6 +58,8 @@ FIXES
 
  * Advanced filter runtime with parameter not correctly managed
 
+ * GIS navigation add button not sorted
+
 
 
 
